@@ -1,5 +1,7 @@
 Beaker Changelog
 =================
+* fixed another bug in synchronization, this one involving reentrant
+conditions with file synchronization
 
 0.7.3 (06/08/07)
 * Beaker was not properly parsing input options to session middleware. Thanks
